@@ -1433,19 +1433,22 @@ class IMP_Mailbox implements Serializable
      */
     static public function getSpecialMailboxesSort()
     {
-        $tmp = array();
+        $out = array();
 
         foreach (array_filter(self::getSpecialMailboxes()) as $val) {
-            if (!is_array($val)) {
-                $val = array($val);
-            }
-            foreach ($val as $val2) {
-                $tmp[strval($val2)] = $val2->abbrev_label;
+            if (is_array($val)) {
+                $tmp = array();
+                foreach ($val as $val2) {
+                    $tmp[strval($val2)] = $val2->abbrev_label;
+                }
+                asort($tmp, SORT_LOCALE_STRING);
+                $out = array_merge($out, array_keys($tmp));
+            } else {
+                $out[] = $val;
             }
         }
 
-        asort($tmp, SORT_LOCALE_STRING);
-        return self::get(array_keys($tmp));
+        return self::get($out);
     }
 
     /**
