@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression in sorting of special mailboxes (Bug #11241).
 * [mms] Fix mailbox sorting in traditional view (Bug #11278).
 * [mms] Fix regression in IMAP cache query script preventing stats in all mailbox reports (Bug #11265).
 * [mms] Fix regression in creating submailboxes in dynamic view.
@@ -2601,6 +2602,7 @@
    <date>2012-07-13</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression in sorting of special mailboxes (Bug #11241).
 * [mms] Fix mailbox sorting in traditional view (Bug #11278).
 * [mms] Fix regression in IMAP cache query script preventing stats in all mailbox reports (Bug #11265).
 * [mms] Fix regression in creating submailboxes in dynamic view.
